# tweet_split_web

./: Cargo.toml  build_release.sh  index.html  main.js
src/: app.rs
