[package]
authors = []
categories = []
description = ""
edition = "2018"
keywords = []
license = "MIT/Apache-2.0"
name = "tweet-split-web"
readme = "README.md"
repository = "https://github.com/yewstack/yew-wasm-pack-minimal"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
tweet_split = { path = "/Users/clark/code/tweet_split" }
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
